Try to speed up the Bundle site regeneration (no great result, best with `bundle exec jekyll serve --profile --incremental`)

--- a/_config.yml
+++ b/_config.yml
@@ -7,3 +7,7 @@ theme: jekyll-theme-minimal
 permalink: /:categories/:title
 kramdown:
     auto_ids: true
+exclude:
+
+  - .jekyll-cache
+  - node_modules
